--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.1'
         classpath 'com.novoda:sqlite-analyzer:0.3.2'
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath "com.android.databinding:dataBinder:1.0-rc1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
